Validating form input

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,5 +8,6 @@
 <body>
 	<h1>Welcome to...</h1>
 	<img th:src="@{/images/TacoCloud.png}"/>
+	<a th:href="@{/design}" id="design">Design new taco</a><br/>
 </body>
 </html>
