--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -10,7 +10,7 @@
 	<h1>Design your taco!</h1>
 	<img th:src="@{/images/TacoCloud.png}" />
 
-	<form method="POST" th:object="${design}">
+	<form method="POST" th:object="${taco}">
 
 		<span class="validationError"
 			th:if="${#fields.hasErrors('ingredients')}"
@@ -21,9 +21,7 @@
 				<h3>Designate your wrap:</h3>
 				<div th:each="ingredient : ${wrap}">
 					<input name="ingredients" type="checkbox"
-						th:value="${ingredient.id}" />
-					<span th:text="${ingredient.name}">INGREDIENT</span>
-					<br />
+						th:value="${ingredient.id}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
 
@@ -31,9 +29,7 @@
 				<h3>Pick your protein:</h3>
 				<div th:each="ingredient : ${protein}">
 					<input name="ingredients" type="checkbox"
-						th:value="${ingredient.id}" />
-					<span th:text="${ingredient.name}">INGREDIENT</span>
-					<br />
+						th:value="${ingredient.id}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
 
@@ -41,9 +37,7 @@
 				<h3>Choose your cheese:</h3>
 				<div th:each="ingredient : ${cheese}">
 					<input name="ingredients" type="checkbox"
-						th:value="${ingredient.id}" />
-					<span th:text="${ingredient.name}">INGREDIENT</span>
-					<br />
+						th:value="${ingredient.id}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
 
@@ -51,9 +45,7 @@
 				<h3>Determine your veggies:</h3>
 				<div th:each="ingredient : ${veggies}">
 					<input name="ingredients" type="checkbox"
-						th:value="${ingredient.id}" />
-					<span th:text="${ingredient.name}">INGREDIENT</span>
-					<br />
+						th:value="${ingredient.id}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
 
@@ -61,22 +53,17 @@
 				<h3>Select your sauce:</h3>
 				<div th:each="ingredient : ${sauce}">
 					<input name="ingredients" type="checkbox"
-						th:value="${ingredient.id}" />
-					<span th:text="${ingredient.name}">INGREDIENT</span>
-					<br />
+						th:value="${ingredient.id}" /> <span th:text="${ingredient.name}">INGREDIENT</span><br />
 				</div>
 			</div>
 		</div>
 
 		<div>
 			<h3>Name your taco creation:</h3>
-			<input type="text" th:field="*{name}" /> 
-			<br />
-      		<span th:text="${#fields.hasErrors('name')}">XXX</span>
-      		<span class="validationError"
-            th:if="${#fields.hasErrors('name')}"
-            th:errors="*{name}">Name Error</span>
-            
+			<input type="text" th:field="*{name}" /> <span
+				class="validationError" th:if="${#fields.hasErrors('name')}"
+				th:errors="*{name}">Name Error</span> <br />
+
 			<button>Submit your taco</button>
 		</div>
 	</form>
