--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,12 +3,15 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-	<title>Taco Cloud</title>
+<title>Taco Cloud</title>
 </head>
 <body>
 	<h1>Welcome to...</h1>
-	<img th:src="@{/images/TacoCloud.png}"/>
-	<br/>
+	<img th:src="@{/images/TacoCloud.png}" />
+	<form method="POST" th:action="@{/logout}" id="logoutForm">
+		<input type="submit" value="Logout" />
+	</form>
+
 	<a th:href="@{/design}" id="design">Design a taco</a>
 </body>
 </html>
